force-app/src/objects/TR1__BHTK_Indexing_status__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Action__c</fullName>
        <label>Action</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FULL_UPDATE</fullName>
                </value>
                <value>
                    <fullName>LIGHTWEIGHT_UPDATE</fullName>
                </value>
                <value>
                    <fullName>DELETE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Age_in_minutes__c</fullName>
        <formula>IF(TR1__Last_indexing__c == null, 100000,
(NOW() - TR1__Last_indexing__c )*1440)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age in minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Available_in_index__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available in index</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Document_text__c</fullName>
        <label>Document text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Failures__c</fullName>
        <label>Failures</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__In_progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Index_after__c</fullName>
        <label>Index after</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__Indexed_document__c</fullName>
        <label>Indexed document</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Is_Postponed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, then the record has been updated during mass sync process.
Sync request is on hold and will be sent after Monitor Bulk Job for mass sync is completed</inlineHelpText>
        <label>Is Postponed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Is_dirty__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is dirty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Last_indexing__c</fullName>
        <label>Last indexing</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__Last_indexing_success__c</fullName>
        <label>Last indexing success</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__Last_response_message__c</fullName>
        <label>Last response message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Last_response_status_code__c</fullName>
        <label>Last response status code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Mass_Sync_Monitoring__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mass Sync Monitoring</label>
        <referenceTo>TR1__Monitor_Bulk_Job__c</referenceTo>
        <relationshipLabel>Textkernel indexing statuses</relationshipLabel>
        <relationshipName>Textkernel_indexing_statusses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Mass_Sync_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only applies to Bullhorn For Salesforce. If checked, then the record should be performed only by mass sync process. MBJ will be created regardless of the value of the Threshold.</description>
        <inlineHelpText>Only applies to Bullhorn For Salesforce. If checked, then the record should be performed only by mass sync process. MBJ will be created regardless of the value of the Threshold.</inlineHelpText>
        <label>Mass Sync Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Match_query_text__c</fullName>
        <label>Match query text</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Object_id__c</fullName>
        <label>Object id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Object_type__c</fullName>
        <label>Object type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Candidate</fullName>
                </value>
                <value>
                    <fullName>Job</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Record_id__c</fullName>
        <externalId>true</externalId>
        <label>Record id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Soap_message__c</fullName>
        <label>Soap_message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Update_fields__c</fullName>
        <label>Update fields</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Textkernel indexing status</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TKIS-{0}</displayFormat>
        <label>Textkernel indexing status number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Textkernel indexing statusses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>